--- a/staticFiles/dashboard/index.html
+++ b/staticFiles/dashboard/index.html
@@ -13,7 +13,7 @@
     <h2>registered players dashboard</h2>
     </div>
     <script>
-        const ws = new WebSocket('ws://localhost:9000');
+        const ws = new WebSocket('wss://shellerstournament-70x3.onrender.com');
         const backbtn = document.querySelector('.backbtn')
         backbtn.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
         <path d="M10 21.308L0.692001 12L10 2.69199L11.063 3.75599L2.82 12L11.064 20.244L10 21.308Z" fill="black"/>
