--- a/staticFiles/page5/index.html
+++ b/staticFiles/page5/index.html
@@ -46,7 +46,7 @@
     <div class="logo"></div>
         <script src="./index5.js"></script>
         <script>
-            const ws = new WebSocket('ws://localhost:9000');
+            const ws = new WebSocket('wss://shellerstournament-70x3.onrender.com');
             let unified = true
             let popElem = null;
             let generatedKeys = {}
